# TypeScript

./: .gitignore  Cargo.toml  package-lock.json  package.json
native/: Cargo.toml  build.rs  napi.config.json
native/npm/darwin-x64/: README.md  package.json
native/npm/linux-x64-gnu/: README.md  package.json
native/npm/win32-x64-msvc/: README.md  package.json
native/src/: lib.rs
native/src/compiler/: scanner.rs  types.rs
scripts/: processDiagnosticMessages.ts
src/: tsconfig.json
src-native/: lib.rs
src-native/compiler/: scanner.rs
src/compiler/: checker.ts  scanner.ts  tsconfig.json  types.ts
src/compiler/native/: addon.ts
src/native-addon/: addon.ts  tsconfig.json
